k8s/core/networking/jaeger-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui
  namespace: otel-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.192.168.100.98.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-demo-jaeger-query
            port:
              number: 16686
  - host: jaeger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-demo-jaeger-query
            port:
              number: 16686
